[package]
name = "proot"
version = "0.2.2"
authors = ["Lucas Vieira <lucas6eng@gmail.com>"]
edition = "2021"
description = "Wrapper around gh CLI"
repository = "https://github.com/iamlucasvieira"
license-file = "LICENSE"
keywords = ["cli", "github"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
